cmake_minimum_required(VERSION 3.2)
project(ArkAngel)

find_package(Git REQUIRED)
find_package(SFML 2 REQUIRED system window graphics audio)
find_package(Boost 1.57.0 REQUIRED)
find_package(Box2D REQUIRED)
find_package(jsoncpp REQUIRED)
add_subdirectory(ginseng)
add_subdirectory(raspberry)
add_subdirectory(bait)
add_subdirectory(AngelScript)
add_subdirectory(SFGUI)

file(GLOB_RECURSE ArkAngel_SOURCES src/*)
list(REMOVE_ITEM ArkAngel_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp")

add_library(lib_ArkAngel ${ArkAngel_SOURCES})
set_property(TARGET lib_ArkAngel PROPERTY CXX_STANDARD 14)
set_property(TARGET lib_ArkAngel APPEND PROPERTY COMPILE_DEFINITIONS BOOST_NO_CXX11_VARIADIC_TEMPLATES)
target_link_libraries(lib_ArkAngel SFGUI ${SFML_LIBRARIES})
target_link_libraries(lib_ArkAngel ginseng)
target_link_libraries(lib_ArkAngel raspberry)
target_link_libraries(lib_ArkAngel bait)
target_link_libraries(lib_ArkAngel ${BOX2D_LIBRARIES})
target_link_libraries(lib_ArkAngel AngelScript)
target_link_libraries(lib_ArkAngel jsoncpp)
add_definitions(-DSFGUI_STATIC)

add_executable(ArkAngel "src/Main.cpp")
set_property(TARGET ArkAngel PROPERTY CXX_STANDARD 14)
set_property(TARGET ArkAngel APPEND PROPERTY COMPILE_DEFINITIONS BOOST_NO_CXX11_VARIADIC_TEMPLATES)
target_link_libraries(ArkAngel lib_ArkAngel)
